--- a/src/bash/tmp.conf
+++ b/src/bash/tmp.conf
@@ -1,20 +1,20 @@
-raw_dataset=/home/yadi/TESTING/test-data-set
-result_pipeline=/home/yadi/TESTING/result_test_pipeline
-genome_ref=/home/yadi/TESTING/reference_genome
+raw_dataset=
+result_pipeline=
+genome_ref=
 genome_name=TAIR10_chr_all.fa
-parallel_mode=false
-npar=2
-fastq_path=/home/yadi/software/FastQC/fastqc
+parallel_mode=true
+npar=32
+fastq_path=/software/FastQC/fastqc
 number_of_dataset=8
 dataset_size=8.7
 pairs_mode=true
 first_pattern=_1.fq.gz
 secnd_pattern=_2.fq.gz
 java_path=/usr/bin/java
-trim_path=/home/yadi/software/Trimmomatic-0.38
-trim_jar=/home/yadi/software/Trimmomatic-0.38/trimmomatic-0.38.jar
+trim_path=/software/Trimmomatic-0.38
+trim_jar=/Trimmomatic-0.38/trimmomatic-0.38.jar
 dir_adap=$trim_path/adapters
-name_adap=/home/yadi/software/Trimmomatic-0.38/adapters/TruSeq3-SE.fa
+name_adap=software/Trimmomatic-0.38/adapters/TruSeq3-PE.fa
 end_mode=PE
 ill_clip=1:30:9
 LEADING=20
@@ -22,26 +22,35 @@ TRAILING=20
 SLIDINGWINDOW=4:20
 MINLEN=36
 n_th=8
-bismark_path=/home/yadi/software/Bismark
-modified_time=1533549833
+bismark_path=/software/Bismark
+modified_time=1539787258
 bis_parallel=8
-buf_size=40
-nucleotide=false
+buf_size=50
+nucleotide=true
 intermediate_files=true
 run_pair_bismark=false
-deduplicate=-p
-methextractor=-p
+deduplicate=-s
+methextractor=-s
 del_inter_file=true
-prep=1
-trim=2
-fastq=2
-bismark=2
-fastqbam=2
-bisdedup=2
-bismeth=1
-cx=2
-methimpute=2
+st_prep=1
+st_trim=3
+st_fastq=3
+st_bismark=3
+st_fastqbam=3
+st_bisdedup=3
+st_bismeth=3
+st_cx=2
+st_methimpute=3
+st_dmrcaller=3
+st_bigwig=3
+st_bedgraph=3
+st_methykit=3
 intermediate=true
+genome_type=maize
+fit_output=true
+enrichment_plot=true
+TES_report=true
+genes_report=true
 file=0
 statistic=Fishers.testDMB
 NCORES=4
@@ -60,6 +69,7 @@ hi_count=NULL
 hi_perc=99.9
 win_size=1000
 step_size=1000
+qsub=false
 tmp_rdata=$result_pipeline/rdata
 tmp_fq=$result_pipeline/trimmomatic-files
 tmp_log=$result_pipeline/trimmomatic-logs
@@ -68,12 +78,13 @@ tmp_bismap=$result_pipeline/bismark-mappers
 tmp_qcbam=$result_pipeline/qc-bam-reports
 tmp_dide=$result_pipeline/bismark-deduplicate
 tmp_dme=$result_pipeline/bismark-meth-extractor
-tmp_clog=$result_pipeline/cluster_logs
+tmp_clog=$result_pipeline/logs
 tmp_cx_report=$result_pipeline/cx-reports
 tmp_meth_out=$result_pipeline/methimpute-out
 tmp_tes_out=$result_pipeline/tes-reports
 tmp_gen_out=$result_pipeline/gen-reports
 tmp_fit_out=$result_pipeline/fit-reports
 tmp_methyl_fmt=$result_pipeline/methylkit-format
-tmp_methal=$result_pipeline/methylkit-output
-tmp_dmr=$result_pipeline/dmrcaller-output
+tmp_dmr=$result_pipeline/dmrcaller-format
+tmp_bed=$result_pipeline/bedgraph-fromat
+tmp_bigwig=$result_pipeline/bigwig-fromat
