Some bugs fixed.

--- a/config/pipeline.conf
+++ b/config/pipeline.conf
@@ -28,6 +28,7 @@ n_th=8
 
 [Bismark]
 bismark_path=/software/Bismark
+samtools_path=
 modified_time=1539787258
 bis_parallel=8
 buf_size=50
@@ -103,4 +104,3 @@ tmp_methyl_fmt=$result_pipeline/methylkit-format
 tmp_dmr=$result_pipeline/dmrcaller-format
 tmp_bed=$result_pipeline/bedgraph-fromat
 tmp_bigwig=$result_pipeline/bigwig-fromat
-
