Fixed some bugs.

--- a/config/pipeline.conf
+++ b/config/pipeline.conf
@@ -4,7 +4,7 @@ result_pipeline=
 genome_ref=
 genome_name=TAIR10_chr_all.fa
 parallel_mode=true
-npar=32
+npar=4
 fastq_path=/software/FastQC/fastqc
 number_of_dataset=8
 dataset_size=8.7
@@ -34,9 +34,9 @@ bis_parallel=8
 buf_size=50
 nucleotide=true
 intermediate_files=true
-run_pair_bismark=false
-deduplicate=-s
-methextractor=-s
+run_pair_bismark=true
+deduplicate=-p
+methextractor=-p
 del_inter_file=true
 
 [STATUS]
