--- a/config/pipeline.conf
+++ b/config/pipeline.conf
@@ -5,20 +5,20 @@ genome_ref=
 genome_name=TAIR10_chr_all.fa
 parallel_mode=true
 npar=4
-fastq_path=/software/FastQC/fastqc
-number_of_dataset=8
-dataset_size=8.7
-pairs_mode=true
-first_pattern=_1.fq.gz
-secnd_pattern=_2.fq.gz
+fastq_path=software/FastQC/fastqc
+number_of_dataset=5
+dataset_size=16.0
+pairs_mode=false
+first_pattern=
+secnd_pattern=
 
 [Trimmomatic]
 java_path=/usr/bin/java
-trim_path=/software/Trimmomatic-0.38
-trim_jar=/Trimmomatic-0.38/trimmomatic-0.38.jar
+trim_path=software/Trimmomatic-0.38
+trim_jar=software/Trimmomatic-0.38/trimmomatic-0.38.jar
 dir_adap=$trim_path/adapters
-name_adap=software/Trimmomatic-0.38/adapters/TruSeq3-PE.fa
-end_mode=PE
+name_adap=software/Trimmomatic-0.38/adapters/TruSeq3-SE.fa
+end_mode=SE
 ill_clip=1:30:9
 LEADING=20
 TRAILING=20
@@ -28,31 +28,32 @@ n_th=8
 
 [Bismark]
 bismark_path=/software/Bismark
-samtools_path=
+samtools_path=/bin/samtools
 modified_time=1539787258
 bis_parallel=8
-buf_size=50
+buf_size=40
 nucleotide=true
 intermediate_files=true
 run_pair_bismark=true
-deduplicate=-p
+deduplicate=-s
 methextractor=-p
 del_inter_file=true
 
 [STATUS]
-st_prep=1
-st_trim=1
-st_fastq=1
-st_bismark=1
-st_fastqbam=1
-st_bisdedup=1
-st_bismeth=1
-st_cx=1
-st_methimpute=1
-st_dmrcaller=1
-st_bigwig=1
-st_bedgraph=1
-st_methykit=1
+st_prep=0
+st_trim=0
+st_fastq=0
+st_bismark=0
+st_fastqbam=0
+st_bisdedup=0
+st_bissort=0
+st_bismeth=0
+st_cx=0
+st_methimpute=0
+st_dmrcaller=0
+st_bigwig=0
+st_bedgraph=0
+st_methykit=0
 
 [Methimpute]
 intermediate=true
@@ -61,6 +62,7 @@ fit_output=true
 enrichment_plot=true
 TES_report=true
 genes_report=true
+mincov=1
 
 [DMR]
 file=0
@@ -104,3 +106,4 @@ tmp_methyl_fmt=$result_pipeline/methylkit-format
 tmp_dmr=$result_pipeline/dmrcaller-format
 tmp_bed=$result_pipeline/bedgraph-fromat
 tmp_bigwig=$result_pipeline/bigwig-fromat
+
