--- a/src/bash/tmp.conf
+++ b/src/bash/tmp.conf
@@ -1,56 +1,59 @@
-raw_dataset=
-result_pipeline=
-genome_ref=
+raw_dataset=/home/yadi/TESTING/test-data-set
+result_pipeline=/mnt/data/ttt
+genome_ref=/home/yadi/TESTING/reference_genome
 genome_name=TAIR10_chr_all.fa
-parallel_mode=true
-npar=32
-fastq_path=/software/FastQC/fastqc
-number_of_dataset=8
-dataset_size=8.7
-pairs_mode=true
-first_pattern=_1.fq.gz
-secnd_pattern=_2.fq.gz
+parallel_mode=false
+npar=4
+fastq_path=/home/yadi/software/FastQC/fastqc
+number_of_dataset=5
+dataset_size=16.0
+pairs_mode=false
+first_pattern=
+secnd_pattern=
 java_path=/usr/bin/java
-trim_path=/software/Trimmomatic-0.38
-trim_jar=/Trimmomatic-0.38/trimmomatic-0.38.jar
+trim_path=/home/yadi/software/Trimmomatic-0.38
+trim_jar=/home/yadi/software/Trimmomatic-0.38/trimmomatic-0.38.jar
 dir_adap=$trim_path/adapters
-name_adap=software/Trimmomatic-0.38/adapters/TruSeq3-PE.fa
-end_mode=PE
+name_adap=/home/yadi/software/Trimmomatic-0.38/adapters/TruSeq3-SE.fa
+end_mode=SE
 ill_clip=1:30:9
 LEADING=20
 TRAILING=20
 SLIDINGWINDOW=4:20
 MINLEN=36
 n_th=8
-bismark_path=/software/Bismark
+bismark_path=/home/yadi/software/Bismark
+samtools_path=/bin/samtools
 modified_time=1539787258
 bis_parallel=8
-buf_size=50
+buf_size=40
 nucleotide=true
 intermediate_files=true
-run_pair_bismark=false
+run_pair_bismark=true
 deduplicate=-s
-methextractor=-s
+methextractor=-p
 del_inter_file=true
-st_prep=1
-st_trim=1
-st_fastq=1
-st_bismark=1
-st_fastqbam=1
-st_bisdedup=1
-st_bismeth=1
-st_cx=1
-st_methimpute=1
-st_dmrcaller=1
-st_bigwig=1
-st_bedgraph=1
-st_methykit=1
+st_prep=0
+st_trim=2
+st_fastq=2
+st_bismark=2
+st_fastqbam=2
+st_bisdedup=2
+st_bissort=2
+st_bismeth=0
+st_cx=0
+st_methimpute=2
+st_dmrcaller=0
+st_bigwig=0
+st_bedgraph=0
+st_methykit=0
 intermediate=true
 genome_type=maize
 fit_output=true
 enrichment_plot=true
 TES_report=true
 genes_report=true
+mincov=1
 file=0
 statistic=Fishers.testDMB
 NCORES=4
