Updated Docker file.

--- a/config/pipeline.conf
+++ b/config/pipeline.conf
@@ -3,6 +3,7 @@ raw_dataset=
 result_pipeline=
 genome_ref=
 genome_name=TAIR10_chr_all.fa
+docker_mode=false
 parallel_mode=true
 npar=4
 fastq_path=software/FastQC/fastqc
@@ -41,7 +42,7 @@ del_inter_file=true
 
 [STATUS]
 st_prep=0
-st_trim=0
+st_trim=1
 st_fastq=0
 st_bismark=0
 st_fastqbam=0
