--- a/src/bash/tmp.conf
+++ b/src/bash/tmp.conf
@@ -1,20 +1,20 @@
-raw_dataset=/home/yadi/TESTING/test-data-set
-result_pipeline=/mnt/data/ttt
-genome_ref=/home/yadi/TESTING/reference_genome
+raw_dataset=
+result_pipeline=
+genome_ref=
 genome_name=TAIR10_chr_all.fa
-parallel_mode=false
+parallel_mode=true
 npar=4
-fastq_path=/home/yadi/software/FastQC/fastqc
+fastq_path=software/FastQC/fastqc
 number_of_dataset=5
 dataset_size=16.0
 pairs_mode=false
 first_pattern=
 secnd_pattern=
 java_path=/usr/bin/java
-trim_path=/home/yadi/software/Trimmomatic-0.38
-trim_jar=/home/yadi/software/Trimmomatic-0.38/trimmomatic-0.38.jar
+trim_path=software/Trimmomatic-0.38
+trim_jar=software/Trimmomatic-0.38/trimmomatic-0.38.jar
 dir_adap=$trim_path/adapters
-name_adap=/home/yadi/software/Trimmomatic-0.38/adapters/TruSeq3-SE.fa
+name_adap=software/Trimmomatic-0.38/adapters/TruSeq3-SE.fa
 end_mode=SE
 ill_clip=1:30:9
 LEADING=20
@@ -22,7 +22,7 @@ TRAILING=20
 SLIDINGWINDOW=4:20
 MINLEN=36
 n_th=8
-bismark_path=/home/yadi/software/Bismark
+bismark_path=/software/Bismark
 samtools_path=/bin/samtools
 modified_time=1539787258
 bis_parallel=8
@@ -34,15 +34,15 @@ deduplicate=-s
 methextractor=-p
 del_inter_file=true
 st_prep=0
-st_trim=2
-st_fastq=2
-st_bismark=2
-st_fastqbam=2
-st_bisdedup=2
-st_bissort=2
+st_trim=0
+st_fastq=0
+st_bismark=0
+st_fastqbam=0
+st_bisdedup=0
+st_bissort=0
 st_bismeth=0
 st_cx=0
-st_methimpute=2
+st_methimpute=0
 st_dmrcaller=0
 st_bigwig=0
 st_bedgraph=0
