--- a/config/pipeline.conf
+++ b/config/pipeline.conf
@@ -1,8 +1,10 @@
 [GENERAL]
+firstRun=true
 raw_dataset=
 result_pipeline=
 genome_ref=
 genome_name=TAIR10_chr_all.fa
+genome_type=Arabidopsis
 docker_mode=false
 parallel_mode=true
 npar=4
