updated config part

--- a/config/pipeline.conf
+++ b/config/pipeline.conf
@@ -44,7 +44,7 @@ del_inter_file=true
 
 [STATUS]
 st_prep=0
-st_trim=1
+st_trim=0
 st_fastq=0
 st_bismark=0
 st_fastqbam=0
@@ -71,8 +71,9 @@ mincov=1
 file=0
 NCORES=4
 
-[SGE]
-qsub=false
+[CONFIGPART]
+resultdir=false
+genomref=false
 
 [Others]
 tmp_rdata=$result_pipeline/rdata
