Added email option, fixed BIGWIG file.

--- a/config/pipeline.conf
+++ b/config/pipeline.conf
@@ -75,6 +75,12 @@ NCORES=4
 resultdir=false
 genomref=false
 
+[EMAIL]
+email_sen=methylstar@johannes.org
+email_rec=
+password=
+active=false
+
 [Others]
 tmp_rdata=$result_pipeline/rdata
 tmp_fq=$result_pipeline/trimmomatic-files
