--- a/config/pipeline.conf
+++ b/config/pipeline.conf
@@ -35,10 +35,11 @@ samtools_path=/bin/samtools
 modified_time=1539787258
 bis_parallel=8
 buf_size=40
-nucleotide=true
+Nthreads=1
+nucleotide=false
 intermediate_files=true
 run_pair_bismark=true
-deduplicate=-s
+deduplicate=-p
 methextractor=-p
 del_inter_file=true
 
