updated into Version 1.4.

--- a/config/pipeline.conf
+++ b/config/pipeline.conf
@@ -6,7 +6,7 @@ genome_ref=
 genome_name=TAIR10_chr_all.fa
 genome_type=Arabidopsis
 docker_mode=false
-parallel_mode=true
+parallel_mode=false
 npar=4
 fastq_path=software/FastQC/fastqc
 number_of_dataset=5
@@ -32,25 +32,29 @@ n_th=8
 [Bismark]
 bismark_path=/software/Bismark
 samtools_path=/bin/samtools
+bedtools_path=
 modified_time=1539787258
 bis_parallel=8
 buf_size=40
 Nthreads=1
 nucleotide=false
-intermediate_files=true
+intermediate_files=false
 run_pair_bismark=true
 deduplicate=-p
 methextractor=-p
 del_inter_file=true
 
 [STATUS]
+quickrun=0
 st_prep=0
 st_trim=0
 st_fastq=0
 st_bismark=0
+st_bissort=0
+st_coreport=0
 st_fastqbam=0
 st_bisdedup=0
-st_bissort=0
+st_dedsort=0
 st_bismeth=0
 st_cx=0
 st_methimpute=0
@@ -58,14 +62,15 @@ st_dmrcaller=0
 st_bigwig=0
 st_bedgraph=0
 st_methykit=0
+fastq=0
 
 [Methimpute]
 intermediate=true
-genome_type=maize
+intermediate_mode=constrained
 fit_output=true
 enrichment_plot=true
-TES_report=true
-genes_report=true
+full_report=true
+context_report=All
 mincov=1
 
 [DMR]
@@ -88,6 +93,7 @@ tmp_fq=$result_pipeline/trimmomatic-files
 tmp_log=$result_pipeline/trimmomatic-logs
 tmp_qcfast=$result_pipeline/qc-fastq-reports
 tmp_bismap=$result_pipeline/bismark-mappers
+tmp_covseq=$result_pipeline/cov-seq-reports
 tmp_qcbam=$result_pipeline/qc-bam-reports
 tmp_dide=$result_pipeline/bismark-deduplicate
 tmp_dme=$result_pipeline/bismark-meth-extractor
