--- a/src/bash/tmp.conf
+++ b/src/bash/tmp.conf
@@ -1,83 +1,81 @@
-raw_dataset=
-result_pipeline=
-genome_ref=
+firstRun=false
+raw_dataset=/mnt/projectDISK/TESTING/MSData/raw
+result_pipeline=/mnt/projectDISK/TESTING/MSData/result
+genome_ref=/mnt/projectDISK/TESTING/reference_genome
 genome_name=TAIR10_chr_all.fa
+genome_type=Arabidopsis
+docker_mode=false
 parallel_mode=true
-npar=4
-fastq_path=software/FastQC/fastqc
-number_of_dataset=5
-dataset_size=16.0
-pairs_mode=false
-first_pattern=
-secnd_pattern=
+npar=2
+fastq_path=/home/yadi/software/FastQC/fastqc
+number_of_dataset=4
+dataset_size=2.1
+pairs_mode=true
+first_pattern=_1.fastq.gz
+secnd_pattern=_2.fastq.gz
 java_path=/usr/bin/java
-trim_path=software/Trimmomatic-0.38
-trim_jar=software/Trimmomatic-0.38/trimmomatic-0.38.jar
+trim_path=/home/yadi/software/Trimmomatic-0.38
+trim_jar=/home/yadi/software/Trimmomatic-0.38/trimmomatic-0.38.jar
 dir_adap=$trim_path/adapters
-name_adap=software/Trimmomatic-0.38/adapters/TruSeq3-SE.fa
-end_mode=SE
+name_adap=/home/yadi/software/Trimmomatic-0.38/adapters/TruSeq3-PE.fa
+end_mode=PE
 ill_clip=1:30:9
 LEADING=20
 TRAILING=20
 SLIDINGWINDOW=4:20
 MINLEN=36
 n_th=8
-bismark_path=/software/Bismark
+bismark_path=/home/yadi/software/Bismark
 samtools_path=/bin/samtools
+bedtools_path=/usr/bin/bedtools
 modified_time=1539787258
 bis_parallel=8
 buf_size=40
-nucleotide=true
+Nthreads=2
+nucleotide=false
 intermediate_files=true
 run_pair_bismark=true
-deduplicate=-s
+deduplicate=-p
 methextractor=-p
 del_inter_file=true
+quickrun=1
 st_prep=0
-st_trim=0
-st_fastq=0
-st_bismark=0
-st_fastqbam=0
-st_bisdedup=0
-st_bissort=0
+st_trim=2
+st_fastq=2
+st_bismark=2
+st_bissort=2
+st_coreport=2
+st_fastqbam=2
+st_bisdedup=2
+st_dedsort=2
 st_bismeth=0
 st_cx=0
 st_methimpute=0
 st_dmrcaller=0
-st_bigwig=0
+st_bigwig=1
 st_bedgraph=0
 st_methykit=0
 intermediate=true
-genome_type=maize
+intermediate_mode=constrained
 fit_output=true
 enrichment_plot=true
-TES_report=true
-genes_report=true
+full_report=true
+context_report=All
 mincov=1
 file=0
-statistic=Fishers.testDMB
 NCORES=4
-DMR_Method=bins
-Chr_local=3,1,20427494
-Chr_local_plotting=3,120000,130000
-Cytosine_context_DMRcaller=CG
-Cytosine_context_Methylkit=CpG
-qvalue=0.01
-difference=25
-qvalue_cutoff=0.01
-meth_cutoff=25
-lo_count=10
-lo_perc=NULL
-hi_count=NULL
-hi_perc=99.9
-win_size=1000
-step_size=1000
-qsub=false
+resultdir=true
+genomref=true
+email_sen=methylstar@johannes.org
+email_rec=shahryary@gmail.com
+password=dqfetnmbfyfbazfi
+active=false
 tmp_rdata=$result_pipeline/rdata
 tmp_fq=$result_pipeline/trimmomatic-files
 tmp_log=$result_pipeline/trimmomatic-logs
 tmp_qcfast=$result_pipeline/qc-fastq-reports
 tmp_bismap=$result_pipeline/bismark-mappers
+tmp_covseq=$result_pipeline/cov-seq-reports
 tmp_qcbam=$result_pipeline/qc-bam-reports
 tmp_dide=$result_pipeline/bismark-deduplicate
 tmp_dme=$result_pipeline/bismark-meth-extractor
@@ -85,9 +83,9 @@ tmp_clog=$result_pipeline/logs
 tmp_cx_report=$result_pipeline/cx-reports
 tmp_meth_out=$result_pipeline/methimpute-out
 tmp_tes_out=$result_pipeline/tes-reports
-tmp_gen_out=$result_pipeline/gen-reports
+tmp_gen_out=$result_pipeline/gene-reports
 tmp_fit_out=$result_pipeline/fit-reports
 tmp_methyl_fmt=$result_pipeline/methylkit-format
 tmp_dmr=$result_pipeline/dmrcaller-format
-tmp_bed=$result_pipeline/bedgraph-fromat
-tmp_bigwig=$result_pipeline/bigwig-fromat
+tmp_bed=$result_pipeline/bedgraph-format
+tmp_bigwig=$result_pipeline/bigwig-format
