--- a/src/bash/tmp.conf
+++ b/src/bash/tmp.conf
@@ -1,15 +1,15 @@
 firstRun=false
 raw_dataset=/mnt/projectDISK/TESTING/MSData/raw
 result_pipeline=/mnt/projectDISK/TESTING/MSData/result
-genome_ref=/mnt/projectDISK/TESTING/reference_genome
-genome_name=TAIR10_chr_all.fa
-genome_type=Arabidopsis
+genome_ref=/mnt/projectDISK/TESTING/reference_genome/human
+genome_name=GRCH38.fa
+genome_type=scBS-Seq
 docker_mode=false
-parallel_mode=true
-npar=2
+parallel_mode=false
+npar=4
 fastq_path=/home/yadi/software/FastQC/fastqc
-number_of_dataset=4
-dataset_size=2.1
+number_of_dataset=8
+dataset_size=22.0
 pairs_mode=true
 first_pattern=_1.fastq.gz
 secnd_pattern=_2.fastq.gz
@@ -20,34 +20,34 @@ dir_adap=$trim_path/adapters
 name_adap=/home/yadi/software/Trimmomatic-0.38/adapters/TruSeq3-PE.fa
 end_mode=PE
 ill_clip=1:30:9
-LEADING=20
-TRAILING=20
-SLIDINGWINDOW=4:20
-MINLEN=36
-n_th=8
+LEADING=16
+TRAILING=16
+SLIDINGWINDOW=4:16
+MINLEN=30
+n_th=2
 bismark_path=/home/yadi/software/Bismark
 samtools_path=/bin/samtools
 bedtools_path=/usr/bin/bedtools
-modified_time=1539787258
+modified_time=1575970051
 bis_parallel=8
 buf_size=40
 Nthreads=2
 nucleotide=false
 intermediate_files=true
 run_pair_bismark=true
-deduplicate=-p
+deduplicate=-s
 methextractor=-p
 del_inter_file=true
-quickrun=1
+quickrun=0
 st_prep=0
 st_trim=2
-st_fastq=2
-st_bismark=2
+st_fastq=1
+st_bismark=0
 st_bissort=2
-st_coreport=2
+st_coreport=0
 st_fastqbam=2
 st_bisdedup=2
-st_dedsort=2
+st_dedsort=0
 st_bismeth=0
 st_cx=0
 st_methimpute=0
