--- a/config/pipeline.conf
+++ b/config/pipeline.conf
@@ -32,7 +32,7 @@ n_th=8
 [Bismark]
 bismark_path=/software/Bismark
 samtools_path=/bin/samtools
-bedtools_path=
+bedtools_path=/usr/bin/bedtools
 modified_time=1539787258
 bis_parallel=8
 buf_size=40
@@ -43,6 +43,7 @@ run_pair_bismark=true
 deduplicate=-p
 methextractor=-p
 del_inter_file=true
+single_cell=false
 
 [STATUS]
 quickrun=0
