updated main configuration

--- a/src/bash/tmp.conf
+++ b/src/bash/tmp.conf
@@ -1,58 +1,58 @@
-firstRun=false
-raw_dataset=/mnt/projectDISK/TESTING/MSData/raw
-result_pipeline=/mnt/projectDISK/TESTING/MSData/result
-genome_ref=/mnt/projectDISK/TESTING/reference_genome/human
-genome_name=GRCH38.fa
-genome_type=scBS-Seq
+firstRun=true
+raw_dataset=
+result_pipeline=
+genome_ref=
+genome_name=TAIR10_chr_all.fa
+genome_type=Arabidopsis
 docker_mode=false
 parallel_mode=false
 npar=4
-fastq_path=/home/yadi/software/FastQC/fastqc
-number_of_dataset=8
-dataset_size=22.0
-pairs_mode=true
-first_pattern=_1.fastq.gz
-secnd_pattern=_2.fastq.gz
+fastq_path=software/FastQC/fastqc
+number_of_dataset=5
+dataset_size=16.0
+pairs_mode=false
+first_pattern=
+secnd_pattern=
 java_path=/usr/bin/java
-trim_path=/home/yadi/software/Trimmomatic-0.38
-trim_jar=/home/yadi/software/Trimmomatic-0.38/trimmomatic-0.38.jar
+trim_path=software/Trimmomatic-0.38
+trim_jar=software/Trimmomatic-0.38/trimmomatic-0.38.jar
 dir_adap=$trim_path/adapters
-name_adap=/home/yadi/software/Trimmomatic-0.38/adapters/TruSeq3-PE.fa
-end_mode=PE
+name_adap=software/Trimmomatic-0.38/adapters/TruSeq3-SE.fa
+end_mode=SE
 ill_clip=1:30:9
-LEADING=16
-TRAILING=16
-SLIDINGWINDOW=4:16
-MINLEN=30
-n_th=2
-bismark_path=/home/yadi/software/Bismark
+LEADING=20
+TRAILING=20
+SLIDINGWINDOW=4:20
+MINLEN=36
+n_th=8
+bismark_path=/software/Bismark
 samtools_path=/bin/samtools
-bedtools_path=/usr/bin/bedtools
-modified_time=1575970051
+bedtools_path=
+modified_time=1539787258
 bis_parallel=8
 buf_size=40
 Nthreads=2
 nucleotide=false
-intermediate_files=true
+intermediate_files=false
 run_pair_bismark=true
-deduplicate=-s
+deduplicate=-p
 methextractor=-p
 del_inter_file=true
 quickrun=0
 st_prep=0
-st_trim=2
-st_fastq=1
+st_trim=0
+st_fastq=0
 st_bismark=0
-st_bissort=2
+st_bissort=0
 st_coreport=0
-st_fastqbam=2
-st_bisdedup=2
+st_fastqbam=0
+st_bisdedup=0
 st_dedsort=0
 st_bismeth=0
 st_cx=0
 st_methimpute=0
 st_dmrcaller=0
-st_bigwig=1
+st_bigwig=0
 st_bedgraph=0
 st_methykit=0
 intermediate=true
@@ -64,11 +64,11 @@ context_report=All
 mincov=1
 file=0
 NCORES=4
-resultdir=true
-genomref=true
+resultdir=false
+genomref=false
 email_sen=methylstar@johannes.org
-email_rec=shahryary@gmail.com
-password=dqfetnmbfyfbazfi
+email_rec=
+password=
 active=false
 tmp_rdata=$result_pipeline/rdata
 tmp_fq=$result_pipeline/trimmomatic-files
